# dpdk-top

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
dpdk-telemetry/: Cargo.toml  README.md
dpdk-telemetry/src/: alerts.rs  discovery.rs  lib.rs  socket.rs
dpdk-telemetry/src/model/: mod.rs  port.rs
examples/minimal_dpdk_app/: Makefile  main.c
scripts/: send_traffic.py
src/: lib.rs  main.rs
src/engine/: alerts.rs  history.rs  mod.rs  poller.rs  rates.rs
src/model/: mempool.rs  mod.rs  state.rs
src/output/: json.rs  mod.rs  oneshot.rs
src/telemetry/: discovery.rs  mod.rs  protocol.rs  socket.rs
src/ui/: app.rs  charts.rs  dashboard.rs  format.rs  mod.rs  theme.rs  views.rs
src/ui/widgets/: bar.rs  mod.rs  sparkline.rs
tests/: unit_tests.rs
