[package]
name = "dpdk-top"
version = "0.1.0"
edition = "2021"
description = "Real-time terminal-based monitoring for DPDK applications via telemetry"
license = "Apache-2.0 OR MIT"
authors = ["Jenia Nikolaev"]
repository = "https://github.com/njenia/dpdk-top"
homepage = "https://github.com/njenia/dpdk-top"
keywords = ["dpdk", "telemetry", "tui", "networking", "monitoring"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ctrlc = "3.4"
uds = "0.4"

[dev-dependencies]
tempfile = "3.14"
